data/derived/comb/progs/unify/prog4020.ml.out
Characters 8-21:
  reverse [1;2;3;4;5;6];;
          ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type bytes = string
